# peepsgen

./: .gitignore  README.md  app.py  build.py  generate.py  netlify.toml  pyproject.toml  requirements.txt
assets/css/: custom.css  fa-all.css
assets/js/: app.js
templates/: index.pug
